[package]
name = "cbs-rust"
version = "0.1.0"
authors = ["sypan <stephenyuehpan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.26"
rayon = "1.5"
clap = { version = "3.0.10", features = ["derive"] }
# https://github.com/Amanieu/parking_lot    # mutex
# https://github.com/crossbeam-rs/crossbeam # channels